--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Boards#edit</h1>
-<p>Find me in app/views/boards/edit.html.erb</p>
+<h1>Edit <%= @board.name%> </h1>
+<%= form_for [@user, @board] do |f| %>
+  <%= f.label :name%>
+  <%= f.text_field :name %>
+  <%= f.submit %>
+  <% end %>
+
