--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,5 +1,9 @@
 Board Index
-<h1>Select a Board</h1>
+<h1>Select a Board</h1><br>
+<%=link_to 'Create New Board', new_board_path%>  
 <% @boards.each do |board| %>
-  <h3> <%= link_to board.name, board_path(board) %> <br> </h3>
+  <h3> <%= link_to board.name, board_path(board) %></h3>
+  <h5> <%= link_to "Edit", edit_board_path(board) %> ||
+  <%= link_to "Delete", board_path(board), method: :delete %> </h5>
+  
   <% end %>
