--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,8 @@
 <h1><%= @list.title %> </h1>
-<h3>
+<h5><%= link_to "Add Task", new_list_item_path(@list) %> </h5><hr>
 <% @items.each do |item| %>
-  <%= item.title %><br>
-  <%= item.details %><br>
-  <%=link_to 'Edit', edit_list_item_path(@list,item)%><br>
+  <h3><%= item.title %><br>
+  <%= item.details %></h3>
+  <h5><%=link_to 'Edit', edit_list_item_path(@list,item)%> ||
+  <%=link_to 'Delete', list_item_path(@list, item), method: :delete %></h5>
 <% end %>
