--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Lists#edit</h1>
-<p>Find me in app/views/lists/edit.html.erb</p>
+<h1>Edit<%= @list.title %>
+
+<%=form_for [@board,@list] do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <br>
+  <%= f.label :priority %>
+  <%= f.text_field :priority %>
+  <br>
+  <%= f.label :icon %>
+  <%- f.text_field :icon %>
+  <%=f.submit %>
+  <% end %>
