--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+<h1>Create New List</h1>
+
+<%=form_for [@board,@list] do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <br>
+  <%= f.label :priority %>
+  <%= f.text_field :priority %>
+  <br>
+  <%= f.label :icon %>
+  <%- f.text_field :icon %>
+  <%=f.submit %>
+  <% end %>
+
