Some sql methods working for boards and lists

--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -8,6 +8,6 @@
   <%= f.text_field :priority %>
   <br>
   <%= f.label :icon %>
-  <%- f.text_field :icon %>
+  <%= f.text_field :icon %> <br>
   <%=f.submit %>
   <% end %>
